[package]
authors = ["Alejandro Gaviria <mr.gaviria@gmail.com>"]
name = "core"
version = "0.1.0"

[dependencies]
dotenv = "0.10.0"
iron = "0.5.1"
lazy_static = "0.2.2"
log = "0.3.6"
mime = "0.2.2"
mount = "0.3.0"
r2d2 = "0.7.1"
r2d2-diesel = "0.12.0"
router = "0.5.1"
serde = "0.9.10"
serde_derive = "0.9.10"
serde_json = "0.9.8"
simplelog = "0.4.2"
time = "0.1.36"
uuid = "0.5.0"

[dependencies.chrono]
features = ["serde"]
version = "^0.3"

[dependencies.diesel]
features = ["chrono", "postgres", "uuid"]
version = "0.12.0"

[dependencies.diesel_codegen]
features = ["postgres"]
version = "0.12.0"
